# BobCheckers

./: .gitignore  CMakeLists.txt  README.md  makefile
docs/: CheckersRules.md  PolyCheckersInterface.md
src/: Board.hh  BobCheckers.cpp  BobCheckersAPI.hh  BobCheckersBackend.hh  CMakeLists.txt  PolyCheckersInterface.md  algorithm.cpp  algorithm.hpp  api.cpp  api.hpp  board.cpp  board.hpp  board_stack.cpp  board_stack.hpp  evaluation.cpp  evaluation.hpp  move.cpp  move.hpp  move_generator.cpp  move_generator.hpp  transposition.cpp  transposition.hpp  utils.cpp  utils.hpp
